src/styles.scss
@use '@angular/material';
@use 'color-theme';
@use 'material-override';

@include material.elevation-classes();
@include material.app-background();

html {
   overflow: hidden;
}

body {
   margin: 0;
   height: 100dvh;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   background-color: var(--rd-primary-lightest);
}

::selection {
   background-color: var(--rd-accent-darker);
   color: var(--rd-white);
}

* {
   overflow: visible;
}

.buttons-container {
   display: flex;
   gap: 1rem;

   button {
      flex: 1;
   }
}

